About: A basic hurricane simulator made for the Hypothetical Hurricanes Wiki. Soon to be more advanced.

v20181031a:
    + Added sea surface temperature
    + Added sea surface temperature anomaly
    + Added some UI at the bottom for environmental fields and map layers
    * Fixed an accidental two "v"s in the version number
    * Storm strength algorithm now takes SST into account
    * Storms weaken faster upon landfall
    * Steering tweaks
    * "E" now rotates through 3 environmental fields: LLSteering, SSTAnomaly, and SST
v20181030a:
    * Steering is now much less drunk
    * Fujiwhara improvements
v20181028a:
    + Added a "Start" button when the sim loads, which will initialize the sim upon being clicked
        > This is to help make things load faster, but is also for future user-customizable basin UI
    + Added graphical rendering for environmental fields
        > Both plain-value and vector-based fields supported, rendering with colored tiles and arrows respectively
        > Press "E" to rotate through the environmental fields, and back to "none"
        > Currently, steering is the only environmental field, so "E" is more of a toggle for now
    * Optimized the environmental field code for future environmental factors, including adding vector support for current steering
        > Steering may have gotten yet more drunk for now
v20181026b:
    * Fixed SHem steering behaving even more drunk than the NHem already is
        > Both hemispheres still drunk; just SHem isn't as drunk
v20181026a:
    + Crikey mate! Added the southern hemisphere
        > No whole-world added yet, so a basin is just one hemisphere or the other; 50/50 chance at generation
    + Added a 'basin' object and moved some variables there for future saving/loading and user management of basin settings
    * Now displays "Land rendering..." while the land is rendering instead of holding the page in a loading cycle
v20181024b: